<resources>
    <string name="app_name">Activite-ThreadUI</string>
    <string name="TAsynchrone">Transmission Asynchrone</string>
    <string name="TDifferee">Transmission Différée</string>
    <string name="TObjetJson">Transmission Objets Json</string>
    <string name="TObjetXml">Transmission Objets Xml</string>
    <string name="TCompressee">Transmission Compressée</string>
    <string name="TAsynchroneOuput">output_transmission_Asynchrones</string>
    <string name="TAsynObjetOutput">output_Transmission_Json</string>
    <string name="TGraphQl">output_Transmission_Graph_Ql</string>
    <string name="TGraphQL">Transmission GraphQL</string>
    <string name="choixAuteur">Choix d\'un auteur</string>
    <string name="postesAuteur">Postes de l\'auteur</string>
    <string name="textDelayed">Text to send</string>
    <string name="sendDelayed">Send</string>
    <string name="waitForResponse">Wait for response</string>

</resources>
