<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <Button
        android:id="@+id/TAsyn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startAsyncActivity"
        android:text="@string/TAsynchrone" />

    <Button
        android:id="@+id/TDiff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TAsyn"
        android:onClick="startDelayedActivity"
        android:text="@string/TDifferee" />

    <Button
        android:id="@+id/TObj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TObjet"
        android:layout_below="@id/TDiff"/>

    <Button
        android:id="@+id/TCom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:text="@string/TCompressee"
        android:layout_below="@id/TObj"/>
    <Button
        android:id="@+id/TGraphQL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TGraphQl"
        android:layout_below="@id/TCom"/>
=======
        android:layout_below="@id/TObj"
        android:onClick="startCompressionActivity"
        android:text="@string/TCompressee" />
>>>>>>> 43a09b112bf902aa03d8e0bc2b96f7c35f0726f2

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TGraphQL"
        android:layout_below="@id/TCom"/>

</RelativeLayout>